fixed alignment for mobile and removed intrusive footer testing submit positioning

--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -160,3 +160,9 @@
     }
   }
 }
+
+@media screen and (max-width: 1200px) {
+  .sidebar-footer {
+    display: none;
+  }
+}
